# planificacion-inferencia-edge

./: red.sh
edge-controller/: Cargo.toml
edge-controller/edge_service_controller/: Cargo.toml  graph.json  input.dot  input_custom.dot  input_vanilla.dot  requirements.txt  script_grafo.py  visualizar.py
edge-controller/edge_service_controller/src/: main.rs
edge-controller/edge_service_controller/src/policies/: from_file.rs  hw_only.rs  mod.rs  noop.rs
edge-controller/edge_service_lib/: Cargo.toml
edge-controller/edge_service_lib/src/: controller.rs
edge-controller/edge_service_lib/src/endpoint_watcher/: mod.rs  service_watcher.rs
edge-proxy/: Cargo.toml
edge-proxy/edge_proxy/: Cargo.toml
edge-proxy/edge_proxy/docker/: Dockerfile.amd64  Dockerfile.tegra
edge-proxy/edge_proxy/scripts/: modelos.csv
edge-proxy/edge_proxy/src/: main.rs  utils.rs
edge-proxy/edge_proxy_lib/: Cargo.toml
edge-proxy/edge_proxy_lib/src/: hardware.rs  lib.rs  server.rs  watcher.rs
imagenes/prometheus/: prometheus.yml
imagenes/triton/: Dockerfile  Dockerfile.amd64  Dockerfile.tegra
proxy-client/: botonazo.py  client.py  datos random.json  datos.json  graficas.py  graficas2.py  graficas2.py.new  output.txt  pods.json  pruebas.py  requirements.txt  salida.csv  tmp.txt
proxy-client/datos.old/: IPVS: lc.json  IPVS: rr.json  edge proxy.json
proxy-client/datos_escenario1/: barras_nodos.eps  iptables.json  lc.json  sed.json  tiempos.eps
proxy-client/datos_escenario2/: custom.json  iptables.json
proxy-client/datos_escenario3/: custom.json  iptables.json  lc.json  sed.json
proxy-client/datos_escenario4/: custom.json  iptables.json  lc.json  rr.json  sed.json
proxy-client/datos_tf32/: custom.json  iptables.json  lc.json  rr.json  sed (copy).json  sed.json
proxy-client/escenario1/: iptables.json  lc.json  rr.json  sed.json
proxy-client/escenario2/: custom.json  lc.json  rr.json  sed.json
proxy-client/escenario3/: rr.json
proxy-client/escenario4/: iptables.json  lc.json  rr.json
proxy-client/masdatos_tf32/: custom.json  sed.json
triton-endpoint-controller/: Cargo.toml
triton-endpoint-controller/tservice_controller/: Cargo.toml  graph.dot  graph.json  graph.json~  input.dot
triton-endpoint-controller/tservice_controller/src/: main.rs
triton-endpoint-controller/tservice_controller/src/policies/: from_file.rs  hw_only.rs  mod.rs  noop.rs
triton-endpoint-controller/tservice_lib/: Cargo.toml
triton-endpoint-controller/tservice_lib/src/: controller.rs  lib.rs  policy.rs
triton-endpoint-controller/tservice_lib/src/endpoint_watcher/: mod.rs  service_watcher.rs
triton-proxy/: Cargo.toml
triton-proxy/docker/: Dockerfile.amd64  Dockerfile.tegra
triton-proxy/scripts/: cliente.py  cliente.py.old  modelos.csv
triton-proxy/src/: hardware.rs  main.rs  metrics.rs  model.rs  server.rs  watcher.rs
triton-proxy/src/policies/: min_latencia.rs  min_queue.rs  mod.rs  requisitos.rs
triton-proxy/triton_proxy/: Cargo.toml
triton-proxy/triton_proxy/docker/: Dockerfile.amd64  Dockerfile.tegra
triton-proxy/triton_proxy/scripts/: cliente.py  modelos.csv  modelos.csv.old
triton-proxy/triton_proxy/src/: main.rs  utils.rs
triton-proxy/triton_proxy/src/policies/: min_latencia.rs  min_queue.rs  mod.rs  random.rs  requisitos.rs  rrobin.rs
triton-proxy/triton_proxy_lib/: Cargo.toml
triton-proxy/triton_proxy_lib/src/: lib.rs  metrics.rs  policy.rs  server.rs
vanilla/: ipvs.txt  service.yaml  triton-daemonset.yaml
yaml_files/: edgeservice-crd.yaml  triton-binding.yaml  triton-crd-service.yaml  triton-daemonset.yaml  triton-namespace.yaml  triton-role.yaml
yaml_files/ejemplos/: edgeservice_prueba.yaml  tservice_prueba.yaml
(+14 files in other folders)
