[package]
name = "tservice_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
console-subscriber = "0.2.0"
env_logger = "0.11.2"
log = "0.4.20"
tokio = { version = "1.37.0", features = ["full"] }
tservice_lib = { path="../tservice_lib/", version="0.1.0" }
kube = { version = "0.87.2", features = ["client"] }
uuid = "1.8.0"
serde = "1.0.198"
serde_json = "1.0.116"
