[package]
name = "tservice_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
httparse = "1.8.0"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.2", features = ["client", "runtime", "derive"] }
log = "0.4.20"
schemars = { version = "0.8.12", features = ["chrono"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
anyhow = "1.0.80"
petgraph = { version = "0.6.4", features = ["serde-1"] }
uuid = { version= "1.7.0", features = ["serde"] }
tide = "0.16.0"
rust_dot = "0.5.1"
