[package]
name = "triton_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.2"
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.2", features = ["client", "runtime"] }
log = "0.4.20"
triton_proxy_lib = { path="../triton_proxy_lib/", version="0.1.0" }
uuid = { version = "1.7.0", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
ringbuffer = "0.15.0"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
csv = "1.3.0"
rand = "0.8.5"
