[package]
name = "triton_proxy_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.2", features = ["client", "runtime"] }
log = "0.4.20"
sysinfo = "0.30.7"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["serde"] }
rustacuda = { git = "https://github.com/jerry73204/RustaCUDA", branch = "fix-arm-build" }
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
prometheus-http-query = "0.8.3"
csv = "1.3.0"
ciborium = "0.2.2"
dashmap = "5.5.3"
ringbuffer = "0.15.0"
itertools = "0.12.1"
